Refactor GameService for improved notification handling